hphp/test/zend/good/Zend/tests/isset_expr_error.php
<?php
isset(1 + 1);
?>