hphp/test/zend/bad/ext/standard/tests/array/bug65304.php
<?php
var_dump(array_sum(array(PHP_INT_MAX, 1)));
var_dump(PHP_INT_MAX + 1);
?>